--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaBean Cafe Linköping</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <button id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-    <nav id="menu"></nav>
+    <nav id="menu">
+        <p class="close">X</p>
+        <a href="">Hem</a>
+        <a href="">Meny</a>
+        <a href="">Kontakt</a>
+
+    </nav>
     <header>
         <h1>Välkommen til JavaBean!</h1>
-        <p>Ditt lokala fik i Linköping!</p>
-
+        <div id="hamburger">
+            <svg viewBox="0 0 100 80" width="40" height="40">
+                <rect width="100" height="20"></rect>
+                <rect y="30" width="100" height="20"></rect>
+                <rect y="60" width="100" height="20"></rect>
+            </svg>
+        </div>
     </header>
     <main>
         <section class="hero-section">
