--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!--Hamburger Button-->
     <button id="hamburger">
         <span></span>
         <span></span>
         <span></span>
     </button>
-    <nav id="menu"></nav>
+
     <header>
         <h1>Välkommen til JavaBean!</h1>
         <p>Ditt lokala fik i Linköping!</p>
@@ -20,8 +22,6 @@
     </header>
     <main>
         <section class="hero-section">
-
-
 
         </section>
 
