--- a/index.html
+++ b/index.html
@@ -8,20 +8,14 @@
 </head>
 <body>
     <nav id="menu">
-        <p class="close">X</p>
         <a href="">Hem</a>
         <a href="">Meny</a>
         <a href="">Kontakt</a>
-
     </nav>
     <header>
         <h1>Välkommen til JavaBean!</h1>
         <div id="hamburger">
-            <svg viewBox="0 0 100 80" width="40" height="40">
-                <rect width="100" height="20"></rect>
-                <rect y="30" width="100" height="20"></rect>
-                <rect y="60" width="100" height="20"></rect>
-            </svg>
+            <img id="menu-button" src="./hamburger.svg" alt="">
         </div>
     </header>
     <main>
