--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaBean Cafe Linköping</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./MalshaCSS.css">
 </head>
 <body>
     <nav id="menu">
@@ -27,6 +28,6 @@
 
     </main>
     <footer>&copy; <a href="https://github.com/Delzarkafashi/javabean-cafe-Linkoping">Team Linköping!</a></footer>
-    
+    <script src="MalshaJS.js"></script>
 </body>
 </html>
