fins slipade lite i css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaBean Cafe Linköping</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./DelzarCSS.css">
 </head>
 <body>
     <nav id="menu">
@@ -12,7 +13,6 @@
         <a href="">Hem</a>
         <a href="">Meny</a>
         <a href="">Kontakt</a>
-
     </nav>
     <header>
         <h1>Välkommen til JavaBean!</h1>
@@ -27,5 +27,6 @@
 
     </main>
     <footer>&copy; <a href="https://github.com/Delzarkafashi/javabean-cafe-Linkoping">Team Linköping!</a></footer>
+    <script src="./Delzarjs.js" defer></script>
 </body>
 </html>
